--- a/src/app/main/contract-signature/components/consider-contract/image-sign-contract/image-sign-contract.component.scss
+++ b/src/app/main/contract-signature/components/consider-contract/image-sign-contract/image-sign-contract.component.scss
@@ -6,18 +6,16 @@
   flex-direction: column;
 }
 
-.text-sign {
-  color: black;
-}
 
 .skeleton-sign-value {
-  position: static;
+  position: absolute;
+  left: 0px;
+  bottom: 5px;
 }
 
 .skeleton-sign-value1 {
   display: none;
 }
-
 
 .input-edit-text {
   width: 101%;
