--- a/src/app/main/customer/customer-add/customer-add.component.html
+++ b/src/app/main/customer/customer-add/customer-add.component.html
@@ -230,7 +230,7 @@
                                 </div>
                                 <div class="input-data">
                                   <img class="input-img">
-                                  <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.email">
+                                  <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.phone">
                                 </div>
                               </div>
         
@@ -408,7 +408,7 @@
                             <div style="display: flex;">
                               <div class="input-data" style="width: 85%;">
                                 <img class="input-img">
-                                <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.email">
+                                <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.phone">
                               </div>
         
                               <div class="input-data" style="width: 7%;margin-left: 8%;">
@@ -504,7 +504,7 @@
                                 class="required-title">*</span></div>
                             <div class="input-data">
                               <!-- <img src="assets/img/login_email.svg" class="input-img"> -->
-                              <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.email">
+                              <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.phone">
                             </div>
                           </div>
         
@@ -889,7 +889,7 @@
                               <div style="display: flex;">
                                 <div class="input-data" style="width: 85%;">
                                   <img class="input-img">
-                                  <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="this.personalCustomer.email">
+                                  <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="this.personalCustomer.phone">
                                 </div>
           
                                 <div class="input-data" style="width: 7%;margin-left: 8%;">
@@ -988,7 +988,7 @@
                                   class="required-title">*</span></div>
                               <div class="input-data">
                                 <!-- <img src="assets/img/login_email.svg" class="input-img"> -->
-                                <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="this.personalCustomer.email">
+                                <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="this.personalCustomer.phone">
                               </div>
                             </div>
           
