--- a/src/app/main/contract-signature/components/footer-signature/footer-signature.component.html
+++ b/src/app/main/contract-signature/components/footer-signature/footer-signature.component.html
@@ -1,10 +1,10 @@
 <div class="footer-contract" *ngIf="this.datas.is_data_contract.status == 20 && this.datas.is_data_contract.release_state == 'CON_HIEU_LUC' && this.mobile === false">
   <div class="btn_footer">
     <div class="label">
-      <button *ngIf="!this.is_show_coordination && !view && this.lang" type="button" name="next" class="next action-button" (click)="processingAuthorization()">{{'authorization' | translate}}</button>
+      <button *ngIf="!this.is_show_coordination && !view && this.lang" type="button" name="next" class="next action-button" (click)="forWardContract()">{{'authorization' | translate}}</button>
       <button *ngIf="!this.is_show_coordination && !view && this.lang" type="button" name="next" class="next action-button" (click)="forWardContract()">{{'forward' | translate}}</button>
 
-      <button *ngIf="!this.is_show_coordination && !view && !this.lang" type="button" name="next" class="next action-button" (click)="processingAuthorization()">{{'Uỷ quyền' | translate}}</button>
+      <button *ngIf="!this.is_show_coordination && !view && !this.lang" type="button" name="next" class="next action-button" (click)="forWardContract()">{{'Uỷ quyền' | translate}}</button>
       <button *ngIf="!this.is_show_coordination && !view && !this.lang" type="button" name="next" class="next action-button" (click)="forWardContract()">{{'Chuyển tiếp' | translate}}</button>
     </div>
 
