--- a/src/app/main/contract-signature/shared/model/forward-contract/forward-contract.component.html
+++ b/src/app/main/contract-signature/shared/model/forward-contract/forward-contract.component.html
@@ -36,16 +36,15 @@
         <span class="require_star">*</span>
       </div>
       <div style="width: 100%; display: flex; justify-content: space-between;">
-        <div class="input-data" style="width: 80%;">
+        <div class="input-dataPhone">
           <input style="width: 88%" autocomplete="off" type="text" formControlName="phone" class="input-text">
         </div>
 
         <!-- <div class="input-data" style="width: 13%;"> -->
-          <div ngbDropdown class="d-inline-block ng-untouched ng-pristine ng-valid dropdown"
-          style="width: 8%;margin-top: 9px;margin-right: 25px;height: 24px;" [class.db_icon_vietnam]="locale == 'vi'"
+          <div ngbDropdown class="d-inline-block ng-untouched ng-pristine ng-valid dropdown dropdownSMS"
+          [class.db_icon_vietnam]="locale == 'vi'"
           [class.db_icon_english]="locale == 'en'">
-          <div class="btn btn-outline-primary" id="dropdownMenu1" ngbDropdownToggle
-            style="margin: -8px;padding-left: 22px;background-color: #ffffff0a;border: 1px solid #106DB6"></div>
+          <div class="btn btn-outline-primary DropdownToggleSMS" id="dropdownMenu1" ngbDropdownToggle></div>
           <div ngbDropdownMenu aria-labelledby="dropdownMenu1" style="min-width: 6rem;">
             <div class="switch-language">
               <div class="db_icon_vietnam" ngbDropdownItem (click)="locale = 'vi'">
@@ -64,21 +63,20 @@
       </div>
     </div>
 
-    <div *ngIf="this.login === 'email'" class="name-item">
+    <div *ngIf="this.login === 'email' &&  this.site === 'NB'" class="name-item">
       <div class="label_item">{{'user.phone' | translate}}
         <span *ngIf="isReqPhone" class="require_star">*</span>
       </div>
       <div style="width: 100%; display: flex; justify-content: space-between;">
-        <div class="input-data" style="width: 80%;">
+        <div class="input-dataEmail">
           <input style="width: 88%" autocomplete="off" type="text" formControlName="phone" class="input-text">
         </div>
 
         <!-- <div class="input-data" style="width: 13%;"> -->
-          <div ngbDropdown class="d-inline-block ng-untouched ng-pristine ng-valid dropdown"
-          style="width: 8%;margin-top: 9px;margin-right: 25px; height: 24px;" [class.db_icon_vietnam]="locale == 'vi'"
+          <div ngbDropdown class="d-inline-block ng-untouched ng-pristine ng-valid dropdown dropdownSMS"
+          [class.db_icon_vietnam]="locale == 'vi'"
           [class.db_icon_english]="locale == 'en'">
-          <div class="btn btn-outline-primary" id="dropdownMenu1" ngbDropdownToggle
-            style="margin: -8px;padding-left: 22px;background-color: #ffffff0a;border: 1px solid #106DB6"></div>
+          <div class="btn btn-outline-primary DropdownToggleSMS" id="dropdownMenu1" ngbDropdownToggle></div>
           <div ngbDropdownMenu aria-labelledby="dropdownMenu1" style="min-width: 6rem;">
             <div class="switch-language">
               <div class="db_icon_vietnam" ngbDropdownItem (click)="locale = 'vi'">
